# portable-type-engine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt  library.json  library.properties
Example/: Example.pro  main.cpp  maindlg.cpp  maindlg.h  maindlg.ui  roboto128.c  test.cpp
Example/Visual Studio/: TestApp.vcxproj  TestApp.vcxproj.filters
Example/fonts/: roboto128.c
FontTool/: Font.h  FontTool.pro  README.md  fontsampler.cpp  fontsampler.h  fontsampler.py  main.cpp  maindlg.cpp  maindlg.h  maindlg.ui  selectcharacters.cpp  selectcharacters.h  selectcharacters.ui  test_fontsampler.py
docs/: esphome.md  lvgl.md
examples/: README.md
examples/LvglMultipleSizes/: LvglMultipleSizes.ino  pte_demo_font.c  pte_demo_font.h
examples/LvglRuntimeResize/: LvglRuntimeResize.ino  pte_demo_font.c  pte_demo_font.h
examples/bmp-test/Visual Studio/: TestApp.vcxproj
examples/esphome/: example_480p_simple.yaml
examples/fonts/: README.md  material_icons.c  pte_fonts.h  roboto_bold.c  roboto_bold_italic.c  roboto_regular.c
examples/windows-test/: roboto128.c  test.cpp
examples/windows-test/Visual Studio/: TestApp.sln  TestApp.vcxproj  TestApp.vcxproj.filters
include/: pte.c  pte.h
src/: lv_pte.h  pte.h
src/esphome/: component.json
src/esphome/pte_font/: __init__.py  fonts.json  lv_pte.c  lv_pte.h  pte_font.cpp  pte_font.h  roboto_bold.c  roboto_bold_italic.c  roboto_italic.c  roboto_regular.c
src/font-tool/: README.md  fontsampler.py  requirements.txt  test_fontsampler.py
src/lvgl/: lv_pte.c  lv_pte.h
src/pte/: README.md  pte.c  pte.h
tests/lvgl/: lv_conf.h  test_lv_pte.c
(+1 files in other folders)
